# bevy_editor_prototypes

./: .gitignore  CONTRIBUTING.md  CREDITS.md  Cargo.toml  README.md  README_COMPREHENSIVE_EDITOR.md  zone01.zone.ron
.cargo/: config.toml  config_fast_builds.toml
.github/workflows/: book.yaml  ci.yaml  release.yaml  update-bevy.yaml
assets/: doodad_manifest.manifest.ron
assets/icons/: CREDITS.md
assets/shaders/: terrain.wgsl
bevy_editor_panes/bevy_2d_viewport/: Cargo.toml
bevy_editor_panes/bevy_3d_viewport/: Cargo.toml
bevy_editor_panes/bevy_3d_viewport/src/: lib.rs  outline_gizmo.rs  selection_box.rs  view_gizmo.rs
bevy_editor_panes/bevy_asset_browser/: Cargo.toml
bevy_editor_panes/bevy_asset_browser/src/: directory_content.rs  lib.rs  top_bar.rs
bevy_editor_panes/bevy_asset_browser/src/io/: mod.rs  task.rs
bevy_editor_panes/bevy_asset_browser/src/ui/: directory_content.rs  mod.rs  nodes.rs  top_bar.rs
bevy_editor_panes/bevy_component_viewer/: Cargo.toml
bevy_editor_panes/bevy_component_viewer/src/: lib.rs
bevy_editor_panes/bevy_marketplace_viewer/: Cargo.toml
bevy_editor_panes/bevy_preferences/: Cargo.toml
bevy_editor_panes/bevy_properties_pane/: Cargo.toml
bevy_editor_panes/bevy_scene_tree/: Cargo.toml
bevy_panes/bevy_preferences/: Cargo.toml
crates/bevy_bsn/: Cargo.toml
crates/bevy_bsn/assets/: 3d_scene.proto_bsn
crates/bevy_bsn/examples/: bsn_asset.rs  bsn_asset_hot.rs  bsn_asset_prefab.rs  bsn_edit.rs  bsn_icbinbsn_hot.rs  bsn_macro.rs  bsn_retained.rs  bsn_retained_scene_tree.rs  bsn_retained_sheep.rs
crates/bevy_bsn/src/: bsn_asset.rs  bsn_helpers.rs  bsn_reflect.rs  construct.rs  construct_impls.rs  construct_reflect.rs  dynamic.rs  entity_patch.rs  lib.rs  patch.rs  prefab.rs  retain.rs
crates/bevy_bsn/src/ast/: Cargo.toml
crates/bevy_bsn/src/ast/src/: lib.rs
crates/bevy_bsn/src/macros/: Cargo.toml
crates/bevy_bsn/src/macros/src/: bsn.rs  derive_construct.rs  lib.rs
crates/bevy_editor/: Cargo.toml
crates/bevy_editor/src/: lib.rs  load_gltf.rs  main.rs  ui.rs
crates/bevy_editor/src/project/: cache.rs  mod.rs  templates.rs
crates/bevy_editor_cam/: Cargo.toml
crates/bevy_editor_cam/examples/: cad.rs  floating_origin.rs  map.rs  minimal.rs  ortho.rs  pseudo_ortho.rs  split_screen.rs  zoom_limits.rs
crates/bevy_editor_cam/src/: input.rs  lib.rs
crates/bevy_editor_cam/src/controller/: component.rs  inputs.rs  mod.rs  momentum.rs  motion.rs  projections.rs  smoothing.rs  zoom.rs
crates/bevy_editor_cam/src/extensions/: anchor_indicator.rs  dolly_zoom.rs  independent_skybox.rs  look_to.rs  mod.rs
crates/bevy_editor_cam/src/extensions/assets/: license.md
crates/bevy_editor_launcher/: Cargo.toml
crates/bevy_editor_launcher/assets/example/: scene.scn.ron
crates/bevy_editor_launcher/assets/models/: chair - Copy (2).glb  cube - Copy (2).glb
crates/bevy_editor_launcher/examples/: simple_editor.rs
crates/bevy_editor_launcher/src/: main.rs  ui.rs
crates/bevy_editor_pls_default_windows/: Cargo.toml
crates/bevy_editor_pls_default_windows/src/: inspector.rs  lib.rs  placement.rs
crates/bevy_editor_pls_default_windows/src/cameras/: mod.rs
crates/bevy_editor_pls_default_windows/src/doodads/: doodad.rs  doodad_manifest.rs  mod.rs  picking.rs
crates/bevy_editor_pls_default_windows/src/hierarchy/: mod.rs  picking.rs
crates/bevy_editor_pls_default_windows/src/zones/: mod.rs  zone_file.rs
crates/bevy_editor_settings/: Bevy.toml  Cargo.toml  READEME.md  README.md
crates/bevy_editor_settings/src/: lib.rs  local_prefs.rs  persistant.rs  persistent.rs
crates/bevy_editor_settings/src/diff/: mod.rs  opaque.rs  structs.rs
crates/bevy_editor_settings/src/file_system/: load.rs  mod.rs
crates/bevy_editor_settings/src/file_system/de/: array.rs  default.rs  enums.rs  list.rs  map.rs  mod.rs  set.rs  struct_utils.rs  structs.rs  tuple.rs  tuple_struct.rs  tuple_utils.rs  value.rs
crates/bevy_editor_settings/src/file_system/ser/: mod.rs  opaque.rs  structs.rs
crates/bevy_editor_settings/src/modals/: editor.rs  mod.rs  project.rs  user.rs  workspace.rs
crates/bevy_editor_settings/src/utils/: mod.rs  struct_utils.rs  tuple_utils.rs
crates/bevy_entity_inspector/: CHANGELOG.md  Cargo.toml  PR_DESCRIPTION.md  PR_DESCRIPTION_FORMATTED.md
crates/bevy_entity_inspector/examples/: cube_server.rs  inspector.rs  property_panel_test.rs
crates/bevy_entity_inspector/src/: events.rs  lib.rs  pane.rs  reflection.rs  remote.rs  theme.rs  tree_builder.rs  ui.rs  ui_systems.rs  widgets.rs
crates/bevy_entity_inspector/src/ui/: disclosure.rs  mod.rs  property_panel.rs  tree.rs
crates/bevy_entity_inspector/tests/: integration_test.rs
crates/bevy_infinite_grid/: Cargo.toml
crates/bevy_infinite_grid/examples/: simple.rs  simple_2d.rs
crates/bevy_infinite_grid/src/: lib.rs
crates/bevy_infinite_grid/src/render/: grid.wgsl  mod.rs
crates/bevy_pane_layout/: Cargo.toml
crates/bevy_pane_layout/src/: components.rs  handlers.rs  lib.rs  pane.rs  pane_drop_area.rs  registry.rs  ui.rs
crates/bevy_pane_layout/src/ui/: divider.rs  mod.rs  pane.rs  pane_group.rs  resize_handle.rs
crates/bevy_proto_bsn/: Cargo.toml
crates/bevy_proto_bsn/assets/: 3d_scene.proto_bsn  3d_scene_child.proto_bsn  hello.proto_bsn
crates/bevy_proto_bsn/examples/: bsn_asset.rs  bsn_edit.rs  bsn_macro.rs  bsn_retained_sheep.rs
crates/bevy_proto_bsn/src/: bsn_asset.rs  bsn_helpers.rs  bsn_reflect.rs  construct.rs  construct_impls.rs  construct_reflect.rs  dynamic.rs  entity_patch.rs  lib.rs  prefab.rs  retain.rs
crates/bevy_proto_bsn/src/ast/: Cargo.toml
crates/bevy_proto_bsn/src/ast/src/: lib.rs
crates/bevy_proto_bsn/src/macros/: Cargo.toml
crates/bevy_proto_bsn/src/macros/src/: bsn.rs  derive_construct.rs  lib.rs
crates/bevy_undo/: Cargo.toml
crates/bevy_undo/examples/: cube_move.rs
crates/bevy_undo/src/: lib.rs
design-book/: book.toml
src/: camera.rs  commands.rs  editor_pls.rs  example_scene.rs  lib.rs  main.rs  tools.rs  ui.rs
templates/alien_cake_addict/: Cargo.toml
templates/alien_cake_addict/src/: main.rs
(+194 files in other folders)
