[workspace]
resolver = "2"
members = ["crates/*", "bevy_editor_panes/*", "bevy_widgets/*", "projects/*"]
default-members = ["crates/bevy_editor"]

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "af93e78b72c1e435e73c54c9d0ac6260dc170762" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }


# local crates

# bevy_editor_panes
bevy_2d_viewport = { path = "bevy_editor_panes/bevy_2d_viewport" }
bevy_3d_viewport = { path = "bevy_editor_panes/bevy_3d_viewport" }
bevy_asset_browser = { path = "bevy_editor_panes/bevy_asset_browser" }
bevy_marketplace_viewer = { path = "bevy_editor_panes/bevy_marketplace_viewer" }
bevy_preferences = { path = "bevy_editor_panes/bevy_preferences" }
bevy_properties_pane = { path = "bevy_editor_panes/bevy_properties_pane" }
bevy_scene_tree = { path = "bevy_editor_panes/bevy_scene_tree" }

# bevy_widgets
bevy_color_picker = { path = "bevy_widgets/bevy_color_picker" }
bevy_command_palette = { path = "bevy_widgets/bevy_command_palette" }
bevy_context_menu = { path = "bevy_widgets/bevy_context_menu" }
bevy_i-cant-believe-its-not-bsn = { path = "bevy_widgets/bevy_i-cant-believe-its-not-bsn" }
bevy_menu_bar = { path = "bevy_widgets/bevy_menu_bar" }
bevy_toolbar = { path = "bevy_widgets/bevy_toolbar" }
bevy_tooltips = { path = "bevy_widgets/bevy_tooltips" }
bevy_text_field = { path = "bevy_widgets/bevy_text_field" }
bevy_numeric_field = { path = "bevy_widgets/bevy_numeric_field" }
bevy_focus = { path = "bevy_widgets/bevy_focus" }
bevy_text_editing = { path = "bevy_widgets/bevy_text_editing" }

# general crates
bevy_asset_preview = { path = "crates/bevy_asset_preview" }
bevy_editor = { path = "crates/bevy_editor" }
bevy_editor_camera = { path = "crates/bevy_editor_camera" }
bevy_editor_settings = { path = "crates/bevy_editor_settings" }
bevy_editor_styles = { path = "crates/bevy_editor_styles" }
bevy_localization = { path = "crates/bevy_localization" }
bevy_pane_layout = { path = "crates/bevy_pane_layout" }
bevy_transform_gizmos = { path = "crates/bevy_transform_gizmos" }
bevy_undo = { path = "crates/bevy_undo" }
bevy_clipboard = { path = "crates/bevy_clipboard" }