[package]
name = "bevy_3d_viewport"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_pane_layout.workspace = true
bevy_editor_cam.workspace = true
bevy_editor_styles.workspace = true
bevy_infinite_grid.workspace = true
bevy_editor_core.workspace = true

[lints]
workspace = true
