[package]
name = "bevy_asset_browser"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
bevy.workspace = true
bevy_editor_styles.workspace = true
bevy_pane_layout.workspace = true
bevy_scroll_box.workspace = true
bevy_context_menu.workspace = true
atomicow.workspace = true

[lints]
workspace = true
