[package]
name = "bevy_component_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_editor_core.workspace = true
bevy_remote.workspace = true
bevy_pane_layout.workspace = true
bevy_editor_styles.workspace = true
bevy_i-cant-believe-its-not-bsn.workspace = true
serde_json = "1.0.140"
ureq = {version = "3.0.12", features = ["json"]}

[lints]
workspace = true
