[package]
name = "bevy_bsn"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_bsn_ast = { path = "src/ast", version = "0.1.0" }
bevy_bsn_macros = { path = "src/macros", version = "0.1.0" }

bevy = { workspace = true }
thiserror = { workspace = true }
variadics_please = { workspace = true }

[dev-dependencies]
bevy_i-cant-believe-its-not-bsn.workspace = true

[lints]
workspace = true

[[example]]
name = "bsn_icbinbsn_hot"
required-features = ["bevy/file_watcher"]
