[package]
name = "bevy_proto_bsn"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_proto_bsn_ast = { path = "src/ast", version = "0.1.0" }
bevy_proto_bsn_macros = { path = "src/macros", version = "0.1.0" }

bevy = { workspace = true }
thiserror = { workspace = true }
variadics_please = { workspace = true }

[lints]
workspace = true

[[example]]
name = "bsn_asset_hot"
required-features = ["bevy/file_watcher"]
