[package]
name = "bevy_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_pane_layout.workspace = true
bevy_menu_bar.workspace = true
bevy_footer_bar.workspace = true
bevy_context_menu.workspace = true
bevy_editor_styles.workspace = true

serde.workspace = true
ron.workspace = true
rfd.workspace = true
futures-util.workspace = true

# Panes
bevy_editor_core.workspace = true
bevy_3d_viewport.workspace = true
bevy_2d_viewport.workspace = true
bevy_scene_tree.workspace = true
bevy_properties_pane.workspace = true
bevy_asset_browser.workspace = true

[lints]
workspace = true
