[package]
name = "bevy_editor_cam"
version = "0.3.1"
edition = "2021"
description = "A camera controller for editors and CAD."
license = "MIT OR Apache-2.0"
keywords = ["controller", "camera", "bevy", "CAD"]
repository = "https://github.com/aevyrie/bevy_editor_cam"
documentation = "https://docs.rs/crate/bevy_editor_cam/latest"
exclude = ["assets/"]

[features]
default = ["extension_anchor_indicator", "extension_independent_skybox"]
extension_anchor_indicator = ["bevy_gizmos"]
extension_independent_skybox = ["bevy_asset", "bevy_core_pipeline"]

[dependencies]
bevy_app = "0.14.0"
bevy_color = "0.14.0"
bevy_derive = "0.14.0"
bevy_ecs = "0.14.0"
bevy_input = "0.14.0"
bevy_log = "0.14.0"
bevy_math = "0.14.0"
bevy_reflect = "0.14.0"
bevy_render = "0.14.0"
bevy_time = "0.14.0"
bevy_transform = "0.14.0"
bevy_utils = "0.14.0"
bevy_window = "0.14.0"
# Optional
bevy_asset = { version = "0.14.0", optional = true }
bevy_core_pipeline = { version = "0.14.0", optional = true }
bevy_gizmos = { version = "0.14.0", optional = true }
# 3rd party
bevy_picking_core = "0.20.0"

[dev-dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "jpeg",
    "ktx2",
    "tonemapping_luts",
    "x11",
    "zstd",
] }
bevy_mod_picking = { version = "0.20.0", default-features = false, features = [
    "backend_raycast",
] }

big_space = "0.7.0"
rand = "0.8"
