[package]
name = "bevy_entity_inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_editor_core.workspace = true
bevy_pane_layout.workspace = true
bevy_remote.workspace = true
bevy_transform.workspace = true
bevy_i-cant-believe-its-not-bsn.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true

[lints]
workspace = true
