[package]
name = "bevy_proto_bsn"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_proto_bsn_ast = { path = "src/ast", version = "0.1.0" }
bevy_proto_bsn_macros = { path = "src/macros", version = "0.1.0" }

bevy = { workspace = true }
thiserror = { workspace = true }
variadics_please = { workspace = true }

[lints]
workspace = true
