[package]
name = "alien_cake_addict"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "015f2c69ca2a2c009fd04eadada282482deaf469", features = ["wayland"] }
bevy_editor = { path = "../../crates/bevy_editor" }
rand = "0.8.5"
rand_chacha = "0.3.1"

