[package]
name = "bevy_proto_bsn_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
thiserror.workspace = true

proc-macro2 = { version = "1.0", default-features = false, features = [
    "span-locations",
] }
syn = { version = "2.0", default-features = false, features = [
    "parsing",
    "printing",
    "clone-impls",
    "full",
] }
quote = { version = "1.0", default-features = false }

[lints]
workspace = true
