[package]
name = "bevy_proto_bsn_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
bevy_proto_bsn_ast = { path = "../ast", version = "0.1.0" }

bevy_macro_utils.workspace = true

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
